# Leontelebot

./: .env  .replit  config.py  main.py  pyproject.toml  requirements.txt  test_google_api.py
attached_assets/: Pasted--Message-patterns-and-responses-for-the-bot-import-random-Greeting-patterns-and-responses-1738563664412.txt
bot/: __init__.py  config.py  handlers.py  logger.py  messages.py
